<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fork</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_insert">InsertActivity</string>
    <string name="name">Name</string>
    <string name="restaurant_name">write restaurant name</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="desc">Detail</string>
    <string name="restaurant_menu">recommendation menu</string>
    <string name="restaurant_desc">write detail</string>
    <string name="add">Add</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Search by Name</string>

</resources>
