<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fork.InsertActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="" />

        <Button
            android:id="@+id/add"
            android:layout_width="70dip"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/searchText"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:hint="@string/search_hint" />

        <Button
            android:id="@+id/search"
            android:layout_width="90dip"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text="@string/search" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>